fixe css on mobile

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -18,6 +18,6 @@
   }
 
   .card{
-    padding: 3rem 1rem;
+    padding: 3rem 0;
   }
 }
