--- a/src/components/list/listlink/listlink.module.css
+++ b/src/components/list/listlink/listlink.module.css
@@ -10,7 +10,7 @@
 
 .list .button{
     width: 100%;
-    padding: 1rem 2rem;
+    padding: 0.8rem 2rem;
     font-size: 1em;
     font-family: "Poppins";
     cursor: pointer;
@@ -50,12 +50,22 @@
 
 @media screen and (min-width:786px) and (max-width:1200px){
     .button{
-        padding: 0.7rem 2rem;
+        padding: 0.6rem 2rem;
+    }
+
+    .button img{
+        max-width: 2.2rem;
+        max-height: 2.2rem;
     }
 }
 
 @media screen and (max-width:786px) {
     .button{
-        padding: 0.5rem 2rem;
+        padding: 0.4rem 2rem;
+    }
+
+    .button img{
+        max-width: 2rem;
+        max-height: 2rem;
     }
 }
